--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+/src/teste.html
+/TrabalhoEstruturaDados/indice_remissivo.txt
+/TrabalhoEstruturaDados/palavras-chave.txt
+/TrabalhoEstruturaDados/texto.txt
+
 
 ### Eclipse ###
 .apt_generated
